2005-12-30  Eric Christopher  <echristo@apple.com>

	* elfxx-mips.c (mips_elf_record_global_got_symbol): Add assert
	to verify we have a got.
	(_bfd_mips_elf_check_relocs): Add R_MIPS_TLS_GOTTPREL to relocs
	needing a GOT.

2005-12-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* configure.host (hppa*64*-*-hpux*): Set host64 to true.

2005-12-29  Nick Clifton  <nickc@redhat.com>

	* hash.c (bfd_hash_set_default_size): Add more entries to the
	hash_size_primes table.

	* stabs.c (_bfd_link_section_stabs): Use bfd_hash_table_init
	rather than bfd_hash_table_init_n(...,251) so that the size of the
	hash table can be controlled by the user.

2005-12-27  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* elf32-hppa.c (elf32_hppa_size_dynamic_sections): Use info->executable
	instead of !info->shared.

2005-12-27  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* vaxlinux.h: New file. (TRAD_CORE_EXTRA_SIZE_ALLOWED): Define.
	(HOST_MACHINE_ARCH): Define. This allows cross-building vax-linux
	hosted binutils.

2005-12-27  Nathan Sidwell  <nathan@codesourcery.com>

	* elf32-mt.c (mt_elf_merge_private_bfd_data): Do not allow mixing
	object files from different mt variants.

2005-12-27  Leif Ekblad  <leif@rdos.net>

	* config.bfd: Add support for RDOS targets.

2005-12-27  Marty Leisner  <leisner@rochester.rr.com>

	* dwarf2.c (lookup_symbol_in_function_table): Check for a function
	name before passing it to strcmp.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (elf_find_function): Don't ignore section syms.
	Simplify filename logic.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (add_stub_sym): Pass info rather than htab.
	Use different names for pic vs non-pic, '.' instead of '_'.
	(allocate_dynrelocs): Adjust add_stub_sym call.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (bfd_section_from_shdr): Treat invalid reloc sections as
	normal sections rather than returning false.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>
